tests/NormalTests/paczka1/fuzzy1/28421830.err
Error in line 1: S117 A331 93,7
Error in line 2: XKg205cDYz3 A929 77,9
Error in line 13: 4G3U A929 79,0
Error in line 17: XKg205cDYz3 S791 43,6
Error in line 33: XKg205cDYz3 S117 68,2
